...
import { Pressable, ScrollView } from 'react-native';
import { AvatarWithText } from '../components/avatar-with-text';

export const SettingsScreen = () => {
  const headerLeftContent = () => (
    <Text size="heading" weight="bold">
      Settings
    </Text>
  );

  const handleToggleNotifications = async () => {
    return Promise.resolve()
  };
...
          <Spacer size="16" />
          <Pressable>
            <SettingsButton iconName="info-outline" settingName="About us" />
          </Pressable>
          <Spacer size="16" />
          <Pressable>
            <SettingsButton iconName="logout" settingName="Log out" />
          </Pressable>
          <Spacer size="16" />
        </Box>
      </ScrollView>
    </CustomSafeAreaView>
  );
...
